--- a/softlearn/frontend/package.json
+++ b/softlearn/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-phone-number-input": "^3.3.9",
+    "react-query": "^3.39.3",
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3"
   },
